[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/enemies/fish.png" type="Texture" id=1]
[ext_resource path="res://scripts/enemy.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 21, 28 )

[sub_resource type="CircleShape2D" id=7]
radius = 441.502

[node name="Node2D" type="Node2D"]

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="KinematicBody2D"]
position = Vector2( 8, 2 )
scale = Vector2( 2.65625, 2.65625 )
frames = SubResource( 5 )
frame = 3
playing = true
offset = Vector2( -3.01176, -0.752941 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( -7, 5 )
rotation = 1.5708
shape = SubResource( 8 )

[node name="VerticalTimer" type="Timer" parent="KinematicBody2D"]
process_mode = 0
autostart = true

[node name="PlayerDetectionArea" type="Area2D" parent="KinematicBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/PlayerDetectionArea"]
shape = SubResource( 7 )

[connection signal="timeout" from="KinematicBody2D/VerticalTimer" to="KinematicBody2D" method="_on_Timer_timeout"]
[connection signal="body_entered" from="KinematicBody2D/PlayerDetectionArea" to="KinematicBody2D" method="_on_PlayerDetectionArea_body_entered"]
[connection signal="body_exited" from="KinematicBody2D/PlayerDetectionArea" to="KinematicBody2D" method="_on_PlayerDetectionArea_body_exited"]
